# SimpleDB

./: CMakeLists.txt  README.MD  block.c  block.h  buffer.c  buffer.h  compile_commands.json  ds.c  ds.h  filemgr.c  filemgr.h  logmgr.c  logmgr.h  main.c  page.c  page.h  utils.h
test/: CMakeLists.txt  blocktest.c  filemgrtest.c  logmgrtest.c  pagetest.c  tests.h  utiltest.c
